# pe-x86-parser

./: CMakeLists.txt  README.md
src/: arg.cpp  arg.h  edt.cpp  except.cpp  exp.hpp  help.cpp  iat.cpp  main.cpp  parser.cpp  reloc.cpp  section.cpp  symbols.cpp
src/x32/: headpe.cpp
src/x64/: headpe.cpp
